<?xml version="1.0" encoding="utf-8"?>
<!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to add a task description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for getting task description input -->

    <EditText
        android:id="@+id/editDishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dish_type"
        android:textColor="@android:color/primary_text_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="4">

                <Button
                    android:id="@+id/buttonP3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialOrange"
                    android:onClick="onDishTypeSelected"
                    android:text="@string/soup"
                    android:textColor="@android:color/primary_text_light" />

                <Button
                    android:id="@+id/buttonP1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialRed"
                    android:onClick="onDishTypeSelected"
                    android:text="@string/main_dish"
                    android:textColor="@android:color/primary_text_light" />

                <Button
                    android:id="@+id/buttonP4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialYellow"
                    android:onClick="onDishTypeSelected"
                    android:text="@string/salad"
                    android:textColor="@android:color/primary_text_light" />

                <Button
                    android:id="@+id/buttonP2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialRed"
                    android:onClick="onDishTypeSelected"
                    android:text="@string/garnish"
                    android:textColor="@android:color/primary_text_light" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="4">

                <RadioButton
                    android:id="@+id/radButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onDishTypeSelected"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onDishTypeSelected"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onDishTypeSelected"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onDishTypeSelected"
                    android:theme="@style/WhiteRadioButton" />

            </RadioGroup>

        </FrameLayout>

        <Button
            android:id="@+id/addButton"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClickAddDish"
            android:text="@string/add_button"
            android:textColor="@android:color/primary_text_dark" />
        </LinearLayout>
    </ScrollView>

    <!-- Add button -->

</LinearLayout>